--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joren Varquez | Portfolio</title>
   <style>
     * {margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif;}
@@ -14,10 +14,29 @@
 
     section {padding: 100px 80px; min-height: 100vh;}
     #home {display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;}
-    #home h2 {font-size: 2.5em; color: #00bfff;}
-    #home p {margin-top: 15px; color: #ccc; max-width: 600px;}
+    #home img {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #00bfff;
+      box-shadow: 0 0 15px rgba(0,191,255,0.3);
+      margin-bottom: 20px;
+    }
+    #home h2 {font-size: 2.3em; color: #00bfff;}
+    #home h3 {color: #ccc; margin-top: 10px; font-weight: 400;}
+    #home p {margin-top: 15px; color: #aaa; max-width: 600px; line-height: 1.6;}
     #home .btn {margin-top: 30px; padding: 12px 30px; border: 1px solid #00bfff; color: #00bfff; border-radius: 5px; transition: 0.3s;}
     #home .btn:hover {background-color: #00bfff; color: #0a0a0a;}
+    .socials {margin-top: 25px;}
+    .socials a {
+      margin: 0 10px;
+      color: #00bfff;
+      font-weight: 500;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    .socials a:hover {color: #fff;}
 
     #about {background-color: #111;}
     #about h2, #projects h2, #skills h2, #contact h2 {font-size: 2em; color: #00bfff; margin-bottom: 20px;}
@@ -53,18 +72,24 @@
 </header>
 
 <section id="home">
+  <img src="profile.jpg" alt="Joren Varquez">
   <h2>Hello, I'm Joren 👋</h2>
-  <p>A passionate <strong>Computer Engineer</strong> specializing in <strong>AI, Web Systems, and Drone Technology.</strong><br>
-  I love creating intelligent systems that make real-world impact.</p>
+  <h3>Computer Engineer | AI, Web & Drone Systems Developer</h3>
+  <p>I build intelligent systems that connect technology with the real world.</p>
   <a href="#projects" class="btn">Explore My Work</a>
+  <div class="socials">
+    <a href="https://linkedin.com/in/jorenvarquez" target="_blank">LinkedIn</a> |
+    <a href="https://github.com/jetjet711" target="_blank">GitHub</a> |
+    <a href="#" target="_blank">Resume</a>
+  </div>
 </section>
 
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I’m a fresh <strong>Computer Engineering graduate</strong> with hands-on experience in developing
-    AI-powered detection systems, full-stack PHP apps, and Flutter-based mobile solutions.
-    My projects focus on practical innovation — from agriculture tech to automation and drone control systems.
+    I’m a fresh <strong>Computer Engineering graduate</strong> passionate about creating technology that blends intelligence and functionality.
+    My focus areas include <strong>AI, Web Systems, and Drone Technology</strong> — with hands-on experience in building
+    neural network models, web automation, and Flutter-based drone control apps.
     <br><br>
     🎓 <strong>Education:</strong> Bachelor of Science in Computer Engineering<br>
     🌎 <strong>Open for Remote Roles:</strong> Korea, USA, Australia
@@ -109,7 +134,9 @@
 <section id="contact">
   <h2>Contact</h2>
   <p>📧 <a href="mailto:jorenvarquez@gmail.com">jorenvarquez@gmail.com</a></p>
-  <p>🔗 <a href="#">LinkedIn</a> | <a href="#">GitHub</a> | <a href="#">Resume</a></p>
+  <p>🔗 <a href="https://linkedin.com/in/jorenvarquez" target="_blank">LinkedIn</a> | 
+     <a href="https://github.com/jetjet711" target="_blank">GitHub</a> | 
+     <a href="#" target="_blank">Resume</a></p>
 </section>
 
 <footer>
