--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </header>
 
 <section id="home">
-  <img src="profile.jpg.JPG" alt="Joren Varquez">
+  <img src="profile.jpg" alt="Joren Varquez">
   <h2>Hello, I'm Joren 👋</h2>
   <h3>Computer Engineer | AI, Web & Drone Systems Developer</h3>
   <p>I build intelligent systems that connect technology with the real world.</p>
