--- a/index.html
+++ b/index.html
@@ -115,6 +115,28 @@
     </div>
   </div>
 </section>
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="projects-container">
+
+    <!-- Project 1 -->
+    <div class="project-card">
+      <img src="faw.jpg" alt="Aerial Detection of FAW Infestation">
+      <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
+      <p>Using drone-based aerial imagery and AI detection to identify and measure FAW infestations in cornfields. Integrated with a DJI drone control system and live WebRTC video feed for real-time detection.</p>
+      <a href="#">View Details</a>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-card">
+      <img src="baptism.jpg" alt="Baptism Scheduling System">
+      <h3>Baptism Scheduling System</h3>
+      <p>A web-based system for managing baptism schedules and certificate requests, featuring an intuitive interface, PHP backend, and MySQL integration for efficient record handling.</p>
+      <a href="#">View Details</a>
+    </div>
+
+  </div>
+</section>
 
 <section id="skills">
   <h2>Skills</h2>
