--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <!-- Project 1 -->
     <div class="project-card">
-      <img src="faw.jpg" alt="Aerial Detection of FAW Infestation">
+      <img src="faw.png" alt="Aerial Detection of FAW Infestation">
       <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
       <p>Using drone-based aerial imagery and AI detection to identify and measure FAW infestations in cornfields. Integrated with a DJI drone control system and live WebRTC video feed for real-time detection.</p>
       <a href="#">View Details</a>
@@ -129,7 +129,7 @@
 
     <!-- Project 2 -->
     <div class="project-card">
-      <img src="baptism.jpg" alt="Baptism Scheduling System">
+      <img src="cert.png" alt="Baptism Scheduling System">
       <h3>Baptism Scheduling System</h3>
       <p>A web-based system for managing baptism schedules and certificate requests, featuring an intuitive interface, PHP backend, and MySQL integration for efficient record handling.</p>
       <a href="#">View Details</a>
