--- a/index.html
+++ b/index.html
@@ -5,15 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joren Varquez | Portfolio</title>
   <style>
-    * {margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif;}
-    body {background-color: #0a0a0a; color: #f5f5f5; scroll-behavior: smooth;}
-    header {display: flex; justify-content: space-between; align-items: center; padding: 20px 60px; background-color: rgba(20,20,20,0.9); position: fixed; width: 100%; top: 0; z-index: 10;}
-    header h1 {font-size: 1.6em; color: #00bfff;}
-    nav a {margin: 0 15px; color: #ccc; text-decoration: none; transition: 0.3s;}
-    nav a:hover {color: #00bfff;}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
 
-    section {padding: 100px 80px; min-height: 100vh;}
-    #home {display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;}
+    body {
+      background-color: #0a0a0a;
+      color: #f5f5f5;
+      scroll-behavior: smooth;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 60px;
+      background-color: rgba(20,20,20,0.9);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 10;
+      backdrop-filter: blur(8px);
+    }
+
+    header h1 {
+      font-size: 1.6em;
+      color: #00bfff;
+      font-weight: 600;
+    }
+
+    nav a {
+      margin: 0 15px;
+      color: #ccc;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #00bfff;
+    }
+
+    section {
+      padding: 100px 80px;
+      min-height: 100vh;
+    }
+
+    /* HOME */
+    #home {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
     #home img {
       width: 160px;
       height: 160px;
@@ -23,12 +71,43 @@
       box-shadow: 0 0 15px rgba(0,191,255,0.3);
       margin-bottom: 20px;
     }
-    #home h2 {font-size: 2.3em; color: #00bfff;}
-    #home h3 {color: #ccc; margin-top: 10px; font-weight: 400;}
-    #home p {margin-top: 15px; color: #aaa; max-width: 600px; line-height: 1.6;}
-    #home .btn {margin-top: 30px; padding: 12px 30px; border: 1px solid #00bfff; color: #00bfff; border-radius: 5px; transition: 0.3s;}
-    #home .btn:hover {background-color: #00bfff; color: #0a0a0a;}
-    .socials {margin-top: 25px;}
+
+    #home h2 {
+      font-size: 2.3em;
+      color: #00bfff;
+    }
+
+    #home h3 {
+      color: #ccc;
+      margin-top: 10px;
+      font-weight: 400;
+    }
+
+    #home p {
+      margin-top: 15px;
+      color: #aaa;
+      max-width: 600px;
+      line-height: 1.6;
+    }
+
+    #home .btn {
+      margin-top: 30px;
+      padding: 12px 30px;
+      border: 1px solid #00bfff;
+      color: #00bfff;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+
+    #home .btn:hover {
+      background-color: #00bfff;
+      color: #0a0a0a;
+    }
+
+    .socials {
+      margin-top: 25px;
+    }
+
     .socials a {
       margin: 0 10px;
       color: #00bfff;
@@ -36,26 +115,136 @@
       text-decoration: none;
       transition: 0.3s;
     }
-    .socials a:hover {color: #fff;}
 
-    #about {background-color: #111;}
-    #about h2, #projects h2, #skills h2, #contact h2 {font-size: 2em; color: #00bfff; margin-bottom: 20px;}
-    #about p {max-width: 800px; color: #ccc; line-height: 1.6;}
+    .socials a:hover {
+      color: #fff;
+    }
 
-    .projects-container {display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px;}
-    .project-card {background-color: #1a1a1a; padding: 20px; border-radius: 10px; transition: 0.3s;}
-    .project-card:hover {transform: translateY(-5px); box-shadow: 0 0 15px #00bfff;}
-    .project-card h3 {color: #00bfff; margin-bottom: 10px;}
-    .project-card p {color: #ccc; font-size: 0.95em;}
+    /* ABOUT */
+    #about {
+      background-color: #111;
+    }
 
-    .skills-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; text-align: center;}
-    .skill-item {background-color: #1a1a1a; padding: 15px; border-radius: 8px; transition: 0.3s;}
-    .skill-item:hover {background-color: #00bfff; color: #0a0a0a; transform: scale(1.05);}
+    #about h2, #projects h2, #skills h2, #contact h2 {
+      font-size: 2em;
+      color: #00bfff;
+      margin-bottom: 20px;
+      text-align: center;
+    }
 
-    #contact {text-align: center;}
-    #contact p {color: #ccc; margin-bottom: 10px;}
-    #contact a {color: #00bfff; text-decoration: none;}
-    footer {text-align: center; padding: 20px; background-color: #111; color: #555;}
+    #about p {
+      max-width: 800px;
+      color: #ccc;
+      line-height: 1.6;
+      margin: auto;
+      text-align: center;
+    }
+
+    /* PROJECTS */
+    #projects {
+      background-color: #0e0e0e;
+    }
+
+    .projects-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
+    }
+
+    .project-card {
+      background-color: #1a1a1a;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: 0.3s;
+      text-align: left;
+    }
+
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 15px #00bfff;
+    }
+
+    .project-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .project-card h3 {
+      color: #00bfff;
+      margin: 15px;
+      font-size: 1.2em;
+    }
+
+    .project-card p {
+      color: #ccc;
+      font-size: 0.95em;
+      margin: 0 15px 15px;
+    }
+
+    .project-card a {
+      display: inline-block;
+      margin: 0 15px 20px;
+      padding: 8px 16px;
+      background: #00bfff;
+      color: #0a0a0a;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .project-card a:hover {
+      background: #0088cc;
+    }
+
+    /* SKILLS */
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .skill-item {
+      background-color: #1a1a1a;
+      padding: 15px;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    .skill-item:hover {
+      background-color: #00bfff;
+      color: #0a0a0a;
+      transform: scale(1.05);
+    }
+
+    /* CONTACT */
+    #contact {
+      text-align: center;
+    }
+
+    #contact p {
+      color: #ccc;
+      margin-bottom: 10px;
+    }
+
+    #contact a {
+      color: #00bfff;
+      text-decoration: none;
+    }
+
+    #contact a:hover {
+      color: #fff;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #111;
+      color: #555;
+    }
   </style>
 </head>
 <body>
@@ -99,42 +288,21 @@
 <section id="projects">
   <h2>Projects</h2>
   <div class="projects-container">
-    <div class="project-card">
-      <h3>Tomato Leaf Disease Detection</h3>
-      <p>Built using Python and TensorFlow to detect plant leaf diseases from Kaggle datasets.
-      Implements neural networks for high accuracy in image classification.</p>
-    </div>
-    <div class="project-card">
-      <h3>Baptism Scheduling System</h3>
-      <p>Web-based PHP + MySQL system for managing baptism events and certificate requests.
-      Includes secure file upload and database integration.</p>
-    </div>
-    <div class="project-card">
-      <h3>Drone Control App</h3>
-      <p>Flutter + DJI SDK mobile app for drone flight control and live FAW detection using WebRTC streaming.</p>
-    </div>
-  </div>
-</section>
-<section id="projects">
-  <h2>My Projects</h2>
-  <div class="projects-container">
-
     <!-- Project 1 -->
     <div class="project-card">
-      <img src="faw.png" alt="Aerial Detection of FAW Infestation">
+      <img src="faw.jpg" alt="Aerial Detection of FAW Infestation">
       <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
-      <p>Using drone-based aerial imagery and AI detection to identify and measure FAW infestations in cornfields. Integrated with a DJI drone control system and live WebRTC video feed for real-time detection.</p>
+      <p>Drone-based AI system detecting FAW infestations in cornfields using real-time image processing, DJI SDK, and WebRTC streaming.</p>
       <a href="#">View Details</a>
     </div>
 
     <!-- Project 2 -->
     <div class="project-card">
-      <img src="cert.png" alt="Baptism Scheduling System">
+      <img src="baptism.jpg" alt="Baptism Scheduling System">
       <h3>Baptism Scheduling System</h3>
-      <p>A web-based system for managing baptism schedules and certificate requests, featuring an intuitive interface, PHP backend, and MySQL integration for efficient record handling.</p>
+      <p>Web-based system built with PHP + MySQL for managing baptism schedules and certificate requests with secure data handling.</p>
       <a href="#">View Details</a>
     </div>
-
   </div>
 </section>
 
@@ -156,9 +324,11 @@
 <section id="contact">
   <h2>Contact</h2>
   <p>📧 <a href="mailto:jorenvarquez@gmail.com">jorenvarquez@gmail.com</a></p>
-  <p>🔗 <a href="https://linkedin.com/in/jorenvarquez" target="_blank">LinkedIn</a> | 
-     <a href="https://github.com/jetjet711" target="_blank">GitHub</a> | 
-     <a href="#" target="_blank">Resume</a></p>
+  <p>
+    🔗 <a href="https://linkedin.com/in/jorenvarquez" target="_blank">LinkedIn</a> |
+    <a href="https://github.com/jetjet711" target="_blank">GitHub</a> |
+    <a href="#" target="_blank">Resume</a>
+  </p>
 </section>
 
 <footer>
