--- a/index.html
+++ b/index.html
@@ -140,63 +140,72 @@
       text-align: center;
     }
 
-    /* PROJECTS */
-    #projects {
-      background-color: #0e0e0e;
-    }
+   /* PROJECTS (Desktop Layout) */
+#projects {
+  background-color: #0e0e0e;
+  padding: 120px 80px;
+}
 
-    .projects-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin-top: 60px;
+}
 
-    .project-card {
-      background-color: #1a1a1a;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: 0.3s;
-      text-align: left;
-    }
+.project-card {
+  display: flex;
+  align-items: center;
+  background-color: #1a1a1a;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0,191,255,0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
 
-    .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 15px #00bfff;
-    }
+.project-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 25px #00bfff;
+}
 
-    .project-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
+.project-card img {
+  width: 45%;
+  height: 250px;
+  object-fit: cover;
+}
 
-    .project-card h3 {
-      color: #00bfff;
-      margin: 15px;
-      font-size: 1.2em;
-    }
+.project-card-content {
+  padding: 25px;
+  width: 55%;
+}
 
-    .project-card p {
-      color: #ccc;
-      font-size: 0.95em;
-      margin: 0 15px 15px;
-    }
+.project-card-content h3 {
+  color: #00bfff;
+  margin-bottom: 10px;
+  font-size: 1.6em;
+}
 
-    .project-card a {
-      display: inline-block;
-      margin: 0 15px 20px;
-      padding: 8px 16px;
-      background: #00bfff;
-      color: #0a0a0a;
-      border-radius: 6px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
+.project-card-content p {
+  color: #ccc;
+  line-height: 1.6;
+  font-size: 1em;
+  margin-bottom: 20px;
+}
 
-    .project-card a:hover {
-      background: #0088cc;
-    }
+.project-card-content a {
+  display: inline-block;
+  padding: 10px 18px;
+  background: #00bfff;
+  color: #0a0a0a;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-weight: 500;
+}
+
+.project-card-content a:hover {
+  background: #0088cc;
+}
 
     /* SKILLS */
     .skills-grid {
@@ -288,23 +297,30 @@
 <section id="projects">
   <h2>Projects</h2>
   <div class="projects-container">
+
     <!-- Project 1 -->
     <div class="project-card">
       <img src="faw.jpg" alt="Aerial Detection of FAW Infestation">
-      <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
-      <p>Drone-based AI system detecting FAW infestations in cornfields using real-time image processing, DJI SDK, and WebRTC streaming.</p>
-      <a href="#">View Details</a>
+      <div class="project-card-content">
+        <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
+        <p>Drone-based AI system detecting FAW infestations in cornfields using real-time image processing, DJI SDK, and WebRTC streaming.</p>
+        <a href="#">View Details</a>
+      </div>
     </div>
 
     <!-- Project 2 -->
     <div class="project-card">
       <img src="baptism.jpg" alt="Baptism Scheduling System">
-      <h3>Baptism Scheduling System</h3>
-      <p>Web-based system built with PHP + MySQL for managing baptism schedules and certificate requests with secure data handling.</p>
-      <a href="#">View Details</a>
+      <div class="project-card-content">
+        <h3>Baptism Scheduling System</h3>
+        <p>Web-based system built with PHP + MySQL for managing baptism schedules and certificate requests with secure data handling.</p>
+        <a href="#">View Details</a>
+      </div>
     </div>
+
   </div>
 </section>
+
 
 <section id="skills">
   <h2>Skills</h2>
