--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
     <!-- Project 1 -->
     <div class="project-card">
-      <img src="faw.jpg" alt="Aerial Detection of FAW Infestation">
+      <img src="faw.png" alt="Aerial Detection of FAW" width="100%">
       <div class="project-card-content">
         <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
         <p>Drone-based AI system detecting FAW infestations in cornfields using real-time image processing, DJI SDK, and WebRTC streaming.</p>
@@ -310,7 +310,7 @@
 
     <!-- Project 2 -->
     <div class="project-card">
-      <img src="baptism.jpg" alt="Baptism Scheduling System">
+    <img src="cert.png" alt="Baptism Scheduling System" width="100%">
       <div class="project-card-content">
         <h3>Baptism Scheduling System</h3>
         <p>Web-based system built with PHP + MySQL for managing baptism schedules and certificate requests with secure data handling.</p>
