--- a/index.html
+++ b/index.html
@@ -294,32 +294,34 @@
   </p>
 </section>
 
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects-container">
+<section id="projects" style="padding: 60px; text-align: center; background: #f9f9f9;">
+  <h2 style="font-size: 2em; margin-bottom: 30px;">My Projects</h2>
+
+  <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
 
     <!-- Project 1 -->
-    <div class="project-card">
-      <img src="faw.png" alt="Aerial Detection of FAW" width="100%">
-      <div class="project-card-content">
-        <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
-        <p>Drone-based AI system detecting FAW infestations in cornfields using real-time image processing, DJI SDK, and WebRTC streaming.</p>
-        <a href="#">View Details</a>
+    <div style="width: 350px; background: white; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
+      <img src="faw.png" alt="Aerial Detection of FAW" style="width: 100%; height: 200px; object-fit: cover;">
+      <div style="padding: 20px;">
+        <h3 style="margin: 0 0 10px;">Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
+        <p style="font-size: 14px; color: #555;">A computer vision and drone-based system for detecting FAW infestations in cornfields using aerial imagery.</p>
+        <a href="#" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
       </div>
     </div>
 
     <!-- Project 2 -->
-    <div class="project-card">
-    <img src="cert.png" alt="Baptism Scheduling System" width="100%">
-      <div class="project-card-content">
-        <h3>Baptism Scheduling System</h3>
-        <p>Web-based system built with PHP + MySQL for managing baptism schedules and certificate requests with secure data handling.</p>
-        <a href="#">View Details</a>
+    <div style="width: 350px; background: white; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
+      <img src="cert.png" alt="Baptism Scheduling System" style="width: 100%; height: 200px; object-fit: cover;">
+      <div style="padding: 20px;">
+        <h3 style="margin: 0 0 10px;">Baptism Scheduling System</h3>
+        <p style="font-size: 14px; color: #555;">A web-based system designed to manage baptism schedules and certificate requests for the parish office.</p>
+        <a href="#" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
       </div>
     </div>
 
   </div>
 </section>
+
 
 
 <section id="skills">
