--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
 
     <!-- Project 1 -->
-    <div style="width: 350px; background: white; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
+    <div style="width: 350px; background: black; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
       <img src="faw.png" alt="Aerial Detection of FAW" style="width: 100%; height: 200px; object-fit: cover;">
       <div style="padding: 20px;">
         <h3 style="margin: 0 0 10px;">Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
@@ -310,7 +310,7 @@
     </div>
 
     <!-- Project 2 -->
-    <div style="width: 350px; background: white; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
+    <div style="width: 350px; background: black; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
       <img src="cert.png" alt="Baptism Scheduling System" style="width: 100%; height: 200px; object-fit: cover;">
       <div style="padding: 20px;">
         <h3 style="margin: 0 0 10px;">Baptism Scheduling System</h3>
