--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       <div style="padding: 20px;">
         <h3 style="margin: 0 0 10px;">Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
         <p style="font-size: 14px; color: #555;">A computer vision and drone-based system for detecting FAW infestations in cornfields using aerial imagery.</p>
-        <a href="#" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
+        <a href="faw.html" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
       </div>
     </div>
 
@@ -315,7 +315,7 @@
       <div style="padding: 20px;">
         <h3 style="margin: 0 0 10px;">Baptism Scheduling System</h3>
         <p style="font-size: 14px; color: #555;">A web-based system designed to manage baptism schedules and certificate requests for the parish office.</p>
-        <a href="#" style="display: inline-block; margin-top: 10px; color: black; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
+        <a href="baptism.html" style="display: inline-block; margin-top: 10px; color: black; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
       </div>
     </div>
 
