--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
   <div class="socials">
     <a href="https://linkedin.com/in/jorenvarquez" target="_blank">LinkedIn</a> |
     <a href="https://github.com/jetjet711" target="_blank">GitHub</a> |
-    <a href="#" target="_blank">Resume</a>
+    <a href="resume.html" target="_blank">Resume</a>
   </div>
 </section>
 
