--- a/resume.html
+++ b/resume.html
@@ -108,7 +108,7 @@
     <div class="section-content">
       <div class="resume-item">
         <h3>Bachelor of Science in Computer Engineering</h3>
-        <span>University of the Visayas • 2021 - 2025</span>
+        <span>Bohol Island State University  • 2021 - 2025</span>
         <p>Focused on AI integration, web development, and drone-based automation systems.</p>
       </div>
     </div>
