--- a/index.html
+++ b/index.html
@@ -4,30 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joren Varquez | Portfolio</title>
+
   <style>
+    /* === GLOBAL === */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: "Poppins", sans-serif;
     }
-    /* ✨ Fade + Slide Animations */
-@keyframes fadeInUp {
-  0% {opacity: 0; transform: translateY(20px);}
-  100% {opacity: 1; transform: translateY(0);}
-}
-
-section, .project-card, .skill-item {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 0.8s ease forwards;
-}
-
-section:nth-of-type(1) { animation-delay: 0.2s; }
-section:nth-of-type(2) { animation-delay: 0.4s; }
-section:nth-of-type(3) { animation-delay: 0.6s; }
-section:nth-of-type(4) { animation-delay: 0.8s; }
-
 
     body {
       background-color: #0a0a0a;
@@ -70,7 +55,7 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
       min-height: 100vh;
     }
 
-    /* HOME */
+    /* === HOME === */
     #home {
       display: flex;
       flex-direction: column;
@@ -89,23 +74,9 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
       margin-bottom: 20px;
     }
 
-    #home h2 {
-      font-size: 2.3em;
-      color: #00bfff;
-    }
-
-    #home h3 {
-      color: #ccc;
-      margin-top: 10px;
-      font-weight: 400;
-    }
-
-    #home p {
-      margin-top: 15px;
-      color: #aaa;
-      max-width: 600px;
-      line-height: 1.6;
-    }
+    #home h2 { font-size: 2.3em; color: #00bfff; }
+    #home h3 { color: #ccc; margin-top: 10px; font-weight: 400; }
+    #home p { margin-top: 15px; color: #aaa; max-width: 600px; line-height: 1.6; }
 
     #home .btn {
       margin-top: 30px;
@@ -121,10 +92,7 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
       color: #0a0a0a;
     }
 
-    .socials {
-      margin-top: 25px;
-    }
-
+    .socials { margin-top: 25px; }
     .socials a {
       margin: 0 10px;
       color: #00bfff;
@@ -133,158 +101,124 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
       transition: 0.3s;
     }
 
-    .socials a:hover {
-      color: #fff;
+    .socials a:hover { color: #fff; }
+
+    /* === MODAL === */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      padding-top: 100px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.85);
     }
 
-/* MODAL STYLES */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.85);
-}
-
-.modal-content {
-  background-color: #1a1a1a;
-  margin: auto;
-  padding: 30px;
-  border: 1px solid #00bfff;
-  width: 80%;
-  max-width: 800px;
-  border-radius: 10px;
-  box-shadow: 0 0 20px #00bfff;
-  color: #ccc;
-  text-align: center;
-  position: relative;
-}
-
-.modal-content img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-.modal-content h2 {
-  color: #00bfff;
-  margin-bottom: 15px;
-}
-
-.modal-content p {
-  line-height: 1.6;
-  margin-bottom: 10px;
-}
-
-.close {
-  color: #aaa;
-  position: absolute;
-  top: 15px;
-  right: 25px;
-  font-size: 30px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close:hover {
-  color: #fff;
-}
-
-
-    /* ABOUT */
-    #about {
-      background-color: #111;
-    }
-
-    #about h2, #projects h2, #skills h2, #contact h2 {
-      font-size: 2em;
-      color: #00bfff;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    #about p {
-      max-width: 800px;
-      color: #ccc;
-      line-height: 1.6;
+    .modal-content {
+      background-color: #1a1a1a;
       margin: auto;
+      padding: 30px;
+      border: 1px solid #00bfff;
+      width: 80%;
+      max-width: 800px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00bfff;
+      color: #ccc;
       text-align: center;
+      position: relative;
     }
 
-   /* PROJECTS (Desktop Layout) */
-#projects {
-  background-color: #0e0e0e;
-  padding: 120px 80px;
-}
+    .modal-content img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
 
-.projects-container {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-  margin-top: 60px;
-}
+    .modal-content h2 { color: #00bfff; margin-bottom: 15px; }
+    .modal-content p { line-height: 1.6; margin-bottom: 10px; }
 
-.project-card {
-  display: flex;
-  align-items: center;
-  background-color: #1a1a1a;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0,191,255,0.2);
-  transition: transform 0.3s, box-shadow 0.3s;
-}
+    .close {
+      color: #aaa;
+      position: absolute;
+      top: 15px;
+      right: 25px;
+      font-size: 30px;
+      font-weight: bold;
+      cursor: pointer;
+    }
 
-.project-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0 25px #00bfff;
-}
+    .close:hover { color: #fff; }
 
-.project-card img {
-  width: 45%;
-  height: 250px;
-  object-fit: cover;
-}
+    /* === PROJECTS === */
+    #projects {
+      background-color: #0e0e0e;
+      padding: 120px 80px;
+    }
 
-.project-card-content {
-  padding: 25px;
-  width: 55%;
-}
+    .projects-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      margin-top: 50px;
+    }
 
-.project-card-content h3 {
-  color: #00bfff;
-  margin-bottom: 10px;
-  font-size: 1.6em;
-}
+    .project-card {
+      width: 350px;
+      background: #1a1a1a;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,191,255,0.2);
+      overflow: hidden;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
 
-.project-card-content p {
-  color: #ccc;
-  line-height: 1.6;
-  font-size: 1em;
-  margin-bottom: 20px;
-}
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 25px #00bfff;
+    }
 
-.project-card-content a {
-  display: inline-block;
-  padding: 10px 18px;
-  background: #00bfff;
-  color: #0a0a0a;
-  border-radius: 6px;
-  text-decoration: none;
-  transition: 0.3s;
-  font-weight: 500;
-}
+    .project-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
 
-.project-card-content a:hover {
-  background: #0088cc;
-}
+    .project-card-content {
+      padding: 20px;
+      text-align: left;
+    }
 
-    /* SKILLS */
+    .project-card-content h3 {
+      color: #00bfff;
+      margin-bottom: 10px;
+      font-size: 1.2em;
+    }
+
+    .project-card-content p {
+      color: #bbb;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+
+    .project-card-content button {
+      margin-top: 15px;
+      background: #00bfff;
+      border: none;
+      color: #0a0a0a;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: 500;
+    }
+
+    .project-card-content button:hover { background: #0088cc; }
+
+    /* === SKILLS === */
+    #skills { text-align: center; }
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -306,24 +240,10 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
       transform: scale(1.05);
     }
 
-    /* CONTACT */
-    #contact {
-      text-align: center;
-    }
-
-    #contact p {
-      color: #ccc;
-      margin-bottom: 10px;
-    }
-
-    #contact a {
-      color: #00bfff;
-      text-decoration: none;
-    }
-
-    #contact a:hover {
-      color: #fff;
-    }
+    /* === CONTACT === */
+    #contact { text-align: center; }
+    #contact a { color: #00bfff; text-decoration: none; }
+    #contact a:hover { color: #fff; }
 
     footer {
       text-align: center;
@@ -333,6 +253,7 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
     }
   </style>
 </head>
+
 <body>
 
 <header>
@@ -359,45 +280,28 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
   </div>
 </section>
 
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    I’m <strong>Joren Varquez</strong>, a passionate <strong>Computer Engineering graduate</strong> dedicated to creating intelligent systems that connect technology with real-world applications.
-    <br><br>
-    My expertise lies in <strong>Artificial Intelligence, Web Systems, and Drone Technology</strong>. I’ve worked on projects integrating machine learning, WebRTC, and DJI SDK for real-time aerial data analysis and automation.
-    <br><br>
-    I believe in building technology that serves people — whether through innovative drone-based detection systems or efficient web solutions for communities.
-    <br><br>
-    🌎 <strong>Open for Remote Roles:</strong> Philippines, Korea, UK, USA, and Australia
-  </p>
-</section>
-
-
-<section id="projects" style="padding: 60px; text-align: center; background: #f9f9f9;">
-  <h2 style="font-size: 2em; margin-bottom: 30px;">My Projects</h2>
-
-  <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
-
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="projects-container">
     <!-- Project 1 -->
-    <div style="width: 350px; background: black; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
-      <img src="faw.png" alt="Aerial Detection of FAW" style="width: 100%; height: 200px; object-fit: cover;">
-      <div style="padding: 20px;">
-        <h3 style="margin: 0 0 10px;">Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
-        <p style="font-size: 14px; color: #555;">A computer vision and drone-based system for detecting FAW infestations in cornfields using aerial imagery.</p>
-        <a href="faw.html" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
+    <div class="project-card">
+      <img src="faw.png" alt="FAW Project">
+      <div class="project-card-content">
+        <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
+        <p>A drone-based AI system to detect FAW infestations using aerial imagery and real-time vision analysis.</p>
+        <button id="openFawModal">View Project</button>
       </div>
     </div>
 
     <!-- Project 2 -->
-    <div style="width: 350px; background: black; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden;">
-      <img src="cert.png" alt="Baptism Scheduling System" style="width: 100%; height: 200px; object-fit: cover;">
-      <div style="padding: 20px;">
-        <h3 style="margin: 0 0 10px;">Baptism Scheduling System</h3>
-        <p style="font-size: 14px; color: #555;">A web-based system designed to manage baptism schedules and certificate requests for the parish office.</p>
-        <a href="baptism.html" style="display: inline-block; margin-top: 10px; color: white; background: #4CAF50; padding: 10px 15px; border-radius: 5px; text-decoration: none;">View Project</a>
+    <div class="project-card">
+      <img src="cert.png" alt="Baptism Scheduling System">
+      <div class="project-card-content">
+        <h3>Baptism Scheduling System</h3>
+        <p>A PHP-MySQL system for managing baptism schedules, records, and digital certificates for parish offices.</p>
+        <button id="openBaptismModal">View Project</button>
       </div>
     </div>
-
   </div>
 </section>
 
@@ -408,10 +312,8 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
     <img src="faw.png" alt="FAW Project" />
     <h2>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h2>
     <p>
-      A drone-based AI system designed to detect and monitor Fall Armyworm
-      (FAW) infestations in cornfields. This project integrates <strong>computer vision</strong>, 
-      <strong>DJI SDK</strong>, and <strong>WebRTC streaming</strong> to perform 
-      real-time detection of infested corn plants using an onboard camera feed.
+      Drone + AI system detecting FAW infestation using TensorFlow, OpenCV, and DJI SDK.  
+      Integrated with real-time WebRTC streaming for live monitoring.
     </p>
     <p><strong>Tech Stack:</strong> Python, TensorFlow, OpenCV, WebRTC, DJI SDK</p>
   </div>
@@ -423,14 +325,11 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
     <img src="cert.png" alt="Baptism Scheduling System" />
     <h2>Baptism Scheduling System</h2>
     <p>
-      A web-based application built with <strong>PHP</strong> and <strong>MySQL</strong>
-      that allows church staff and parishioners to schedule baptism ceremonies,
-      manage records, and generate digital certificates with ease.
+      Web system to manage baptism schedules, automate record storage, and generate digital certificates.
     </p>
     <p><strong>Tech Stack:</strong> PHP, MySQL, HTML, CSS, JavaScript</p>
   </div>
 </div>
-
 
 <section id="skills">
   <h2>Skills</h2>
@@ -450,49 +349,36 @@ section:nth-of-type(4) { animation-delay: 0.8s; }
 <section id="contact">
   <h2>Contact</h2>
   <p>📬 Let’s connect and collaborate!</p>
-
   <div class="socials">
-    <a href="mailto:jorenvarquez11@gmail.com" target="_blank">📧 Email</a> |
+    <a href="mailto:jorenvarquez11@gmail.com">📧 Email</a> |
     <a href="https://github.com/jetjet711" target="_blank">🐙 GitHub</a> |
     <a href="https://linkedin.com/in/jorenvarquez" target="_blank">💼 LinkedIn</a>
   </div>
-
-  <p style="margin-top:15px; color:#aaa;">
-    I’m always open to discuss ideas, research, or development projects related to AI, web systems, and drones.
-  </p>
 </section>
-
 
 <footer>
   <p>© 2025 Joren Varquez. All Rights Reserved.</p>
 </footer>
 
-</body>
-</html>
 <script>
-  // Get modal elements
+  // 🟦 MODAL JS FIX
   const fawModal = document.getElementById("fawModal");
   const baptismModal = document.getElementById("baptismModal");
+  const openFawModal = document.getElementById("openFawModal");
+  const openBaptismModal = document.getElementById("openBaptismModal");
+  const closeButtons = document.querySelectorAll(".close");
 
-  // Get buttons (links)
-  const fawBtn = document.querySelector('.project-card:nth-child(1) a');
-  const baptismBtn = document.querySelector('.project-card:nth-child(2) a');
+  openFawModal.onclick = () => fawModal.style.display = "block";
+  openBaptismModal.onclick = () => baptismModal.style.display = "block";
 
-  // Get close buttons
-  const closeBtns = document.querySelectorAll(".close");
-
-  // Open modals
-  fawBtn.onclick = () => fawModal.style.display = "block";
-  baptismBtn.onclick = () => baptismModal.style.display = "block";
-
-  // Close modals
-  closeBtns.forEach(btn => {
-    btn.onclick = () => btn.parentElement.parentElement.style.display = "none";
+  closeButtons.forEach(btn => {
+    btn.onclick = () => btn.closest(".modal").style.display = "none";
   });
 
-  // Close modal when clicking outside
-  window.onclick = function(e) {
-    if (e.target === fawModal) fawModal.style.display = "none";
-    if (e.target === baptismModal) baptismModal.style.display = "none";
-  }
+  window.onclick = (event) => {
+    if (event.target === fawModal) fawModal.style.display = "none";
+    if (event.target === baptismModal) baptismModal.style.display = "none";
+  };
 </script>
+</body>
+</html>
