--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <div class="project-card-content">
         <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
         <p>A drone-based AI system to detect FAW infestations using aerial imagery and real-time vision analysis.</p>
-        <button id="openFawModal">View Project</button>
+        <button onclick="openModal('fawModal')">View Details</button>
       </div>
     </div>
 
@@ -299,7 +299,7 @@
       <div class="project-card-content">
         <h3>Baptism Scheduling System</h3>
         <p>A PHP-MySQL system for managing baptism schedules, records, and digital certificates for parish offices.</p>
-        <button id="openBaptismModal">View Project</button>
+        <button onclick="openModal('baptismModal')">View Details</button>
       </div>
     </div>
   </div>
