--- a/index.html
+++ b/index.html
@@ -389,5 +389,20 @@ window.onclick = function(event) {
   });
 };
 </script>
+  <footer style="text-align: center; padding: 20px 0; color: #bbb; border-top: 1px solid #333; font-size: 14px;">
+  © 2025 <strong>Joren Varquez</strong> | 
+  <a href="https://jorenvarquez.github.io" style="color: #bbb; text-decoration: none;">jorenvarquez.github.io</a>
+</footer>
+<script>
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      document.querySelector(this.getAttribute('href')).scrollIntoView({
+        behavior: 'smooth'
+      });
+    });
+  });
+</script>
+
 </body>
 </html>
