--- a/index.html
+++ b/index.html
@@ -279,6 +279,33 @@
     <a href="resume.html" target="_blank">Resume</a>
   </div>
 </section>
+<!-- ==========================
+     ABOUT SECTION
+=========================== -->
+<section id="about">
+  <h2>About Me</h2>
+  <p style="max-width: 800px; margin-top: 20px; line-height: 1.8; color: #bbb;">
+    Hello! I'm <strong>Joren Varquez</strong>, a passionate <strong>Computer Engineer</strong> who loves creating intelligent systems
+    that bridge software, hardware, and real-world applications. I specialize in developing 
+    AI-driven and web-based solutions — from drone-integrated detection systems to smart database platforms.
+  </p>
+  <p style="max-width: 800px; margin-top: 20px; line-height: 1.8; color: #bbb;">
+    My goal is to design technology that not only solves problems but also helps people — whether it's assisting
+    farmers through aerial analysis or simplifying community management with automated systems.
+  </p>
+  <p style="margin-top: 30px;">
+    <a href="resume.pdf" target="_blank" class="btn" style="
+      display: inline-block;
+      padding: 12px 25px;
+      color: #fff;
+      background: #00bfff;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: 0.3s;
+    ">Download Resume</a>
+  </p>
+</section>
 
 <section id="projects">
   <h2>My Projects</h2>
