--- a/index.html
+++ b/index.html
@@ -284,28 +284,21 @@
 =========================== -->
 <section id="about">
   <h2>About Me</h2>
-  <p style="max-width: 800px; margin-top: 20px; line-height: 1.8; color: #bbb;">
-    Hello! I'm <strong>Joren Varquez</strong>, a passionate <strong>Computer Engineer</strong> who loves creating intelligent systems
-    that bridge software, hardware, and real-world applications. I specialize in developing 
-    AI-driven and web-based solutions — from drone-integrated detection systems to smart database platforms.
+  <p>
+    Hello! I'm <strong>Joren Varquez</strong>, a passionate <strong>Computer Engineer</strong> dedicated to creating
+    intelligent systems that merge software, hardware, and real-world applications. I love building solutions that
+    make technology accessible and useful — from AI-powered drone systems to modern web platforms.
   </p>
-  <p style="max-width: 800px; margin-top: 20px; line-height: 1.8; color: #bbb;">
-    My goal is to design technology that not only solves problems but also helps people — whether it's assisting
-    farmers through aerial analysis or simplifying community management with automated systems.
+  <p>
+    My focus areas include <strong>AI, Web Systems, and Drone Technology</strong>. I’m driven by a vision of innovation,
+    efficiency, and creativity — developing systems that not only function but inspire.
   </p>
-  <p style="margin-top: 30px;">
-    <a href="resume.pdf" target="_blank" class="btn" style="
-      display: inline-block;
-      padding: 12px 25px;
-      color: #fff;
-      background: #00bfff;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.3s;
-    ">Download Resume</a>
+  <p>
+    🌎 <strong>Open for Remote Roles:</strong> Korea, USA, and Australia
   </p>
+  <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
 </section>
+
 
 <section id="projects">
   <h2>My Projects</h2>
