--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ window.onclick = function(event) {
       title.textContent = skill.title;
       desc.textContent = skill.desc;
       popup.style.display = 'block';
-      popup.scrollIntoView({ behavior: 'smooth' });
+      //popup.scrollIntoView({ behavior: 'smooth' });
     });
   });
 </script>
