--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   <p>
     🌎 <strong>Open for Remote Roles:</strong> Korea, USA, and Australia
   </p>
-  <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
+  <a href="Resume.pdf" target="_blank" class="btn">Download Resume</a>
 </section>
 
 
