--- a/index.html
+++ b/index.html
@@ -371,30 +371,7 @@
 </section>
 
 
-<section id="projects">
-  <h2>My Projects</h2>
-  <div class="projects-container">
-    <!-- Project 1 -->
-    <div class="project-card">
-      <img src="faw.png" alt="FAW Project">
-      <div class="project-card-content">
-        <h3>Aerial Detection of Fall Armyworm (FAW) Infestation in Corn Field</h3>
-        <p>A drone-based AI system to detect FAW infestations using aerial imagery and real-time vision analysis.</p>
-        <button onclick="openModal('fawModal')">View Details</button>
-      </div>
-    </div>
 
-    <!-- Project 2 -->
-    <div class="project-card">
-      <img src="cert.png" alt="Baptism Scheduling System">
-      <div class="project-card-content">
-        <h3>Baptism Scheduling System</h3>
-        <p>A PHP-MySQL system for managing baptism schedules, records, and digital certificates for parish offices.</p>
-        <button onclick="openModal('baptismModal')">View Details</button>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section id="projects">
   <h2>My Projects</h2>
@@ -515,6 +492,48 @@ window.onclick = function(event) {
       });
     });
   });
+  <!-- Modal: Line-Follower Robot -->
+<div id="robotModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('robotModal')">&times;</span>
+    <img src="robot.jpg" alt="Line-Follower Robot" class="modal-img">
+    <h2>Line-Follower Robot</h2>
+    <p>
+      A microprocessor-based robot designed to autonomously follow a black line path using IR sensors and DC motor control.
+      The robot detects the track through light reflectivity and adjusts its direction dynamically using programmed logic.
+    </p>
+    <p><strong>Technologies:</strong> Arduino, IR Sensors, DC Motors, Motor Driver (L293D), C/C++</p>
+  </div>
+</div>
+
+<!-- Modal: 4-Bit Subtractor -->
+<div id="subtractorModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('subtractorModal')">&times;</span>
+    <img src="subtractor.jpg" alt="4-Bit Subtractor" class="modal-img">
+    <h2>4-Bit Subtractor</h2>
+    <p>
+      A combinational logic circuit that performs binary subtraction using full subtractor modules.
+      The project demonstrates understanding of digital electronics concepts such as borrow logic and binary arithmetic.
+    </p>
+    <p><strong>Technologies:</strong> Logic Gates, Digital Circuit Design, Breadboard & IC Implementation</p>
+  </div>
+</div>
+
+<!-- Modal: RFID-Based Door Lock System -->
+<div id="rfidModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('rfidModal')">&times;</span>
+    <img src="rfid.jpg" alt="RFID-Based Door Lock System" class="modal-img">
+    <h2>RFID-Based Door Lock Security System</h2>
+    <p>
+      An embedded system that authenticates users via RFID tags to control door access.
+      The system triggers a solenoid lock and buzzer for entry feedback while displaying messages on an LCD screen.
+    </p>
+    <p><strong>Technologies:</strong> Arduino / Raspberry Pi, RFID Module, Relay, LCD Display, C/C++ / Python</p>
+  </div>
+</div>
+
 </script>
 <script>
   const skills = {
