--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
     <!-- Project 4: 4-Bit Subtractor -->
     <div class="project-card">
-      <img src="subtractor.jpg" alt="4-Bit Subtractor">
+      <img src="4bit.jpg" alt="4-Bit Subtractor">
       <div class="project-card-content">
         <h3>4-Bit Subtractor</h3>
         <p>A digital electronics project designed using logic gates to perform binary subtraction operations accurately.</p>
